fixed top-manu dropdown on mobile

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/** @format */
+
 body {
   background: url(bg.png);
   background-size: cover;
@@ -79,6 +81,18 @@ nav a {
   opacity: 0.6;
 }
 
+.dark {
+  display: none;
+}
+.dark.open {
+  display: block;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.9);
+  position: fixed;
+  top: 0;
+  left: 0;
+}
 .dropdown {
   position: absolute;
   top: 20px;
@@ -150,18 +164,20 @@ form {
   padding: 0 4px;
 }
 
-.first-name {
+.sign-inp {
   display: flex;
   padding-bottom: 46px;
+  width: 70vw;
+  max-width: 296px;
 }
 
-.first-name input {
-  width: 269px;
+.sign-inp input {
+  width: 100%;
   border: 0;
   border-bottom: 1px solid #d2d2d2;
 }
 
-.first-name input:focus {
+.sign-inp input:focus {
   outline: none;
   border-bottom-color: #7b1fa2;
   transition: border-bottom-color 2s;
@@ -173,44 +189,10 @@ form {
   margin-left: 4px;
 }
 
-.email {
-  display: flex;
-  padding-bottom: 46px;
-}
-
-.email input {
-  width: 269px;
-  border: 0;
-  border-bottom: 1px solid #d2d2d2;
-}
-
-.email input:focus {
-  outline: none;
-  border-bottom-color: #7b1fa2;
-  transition: border-bottom-color 2s;
-}
-
 .email::before {
   content: url("icons/email.png");
   margin-right: 15px;
   margin-left: 4px;
-}
-
-.password {
-  display: flex;
-  padding-bottom: 46px;
-}
-
-.password input {
-  width: 269px;
-  border: 0;
-  border-bottom: 1px solid #d2d2d2;
-}
-
-.password input:focus {
-  outline: none;
-  border-bottom-color: #7b1fa2;
-  transition: border-bottom-color 2s;
 }
 
 .password::before {
@@ -289,7 +271,6 @@ footer {
 
   .top-nav {
     display: none;
-    background-color: rgba(0, 0, 0, 0.4);
   }
 
   .top-nav.open {
@@ -300,7 +281,6 @@ footer {
     left: 0;
     z-index: 1;
     top: 0;
-    background: rgba(0, 0, 0, 0.9);
   }
 
   .nav-open {
@@ -311,6 +291,7 @@ footer {
 
   .nav-open a {
     padding: 10px;
+    font-size: 30px;
   }
 
   .nav-open .components,
